--- a/android UI/app/src/main/AndroidManifest.xml
+++ b/android UI/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-feature android:name="android.hardware.camera2" android:required="true"/>
 
+    <queries>
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE" />
+        </intent>
+    </queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -31,9 +37,18 @@
             android:name=".MainActivity"
             android:exported="true"></activity>
 
+        <activity android:name=".CamActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="kr.ac.kumoh.s20190541.teamproject.provider"
+            android:authorities="kr.ac.kumoh.s20190541.teamproject"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
