--- a/android UI/app/src/main/AndroidManifest.xml
+++ b/android UI/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_main2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_main2_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamProject">
         <activity
